# drf_log_tester

./: .gitignore  README.md  docker-compose.yml  docker-network.sh  pyproject.toml
api/bases/users/: admin.py  models.py
api/versioned/v1/users/: serializers.py  viewsets.py
app/: Dockerfile  docker-compose.yml
app/api/bases/users/migrations/: 0001_initial.py
app/api/versioned/v1/users/: serializers.py  urls.py  viewsets.py
app/common/: statics.py
app/conf/: app.conf  run.sh  uwsgi.ini
app/tester/: settings.py  urls.py
common/: mixins.py
elk/: README.md  docker-compose.yml
elk/extensions/filebeat/: filebeat-elasticsearch.yml  filebeat-logstash.yml
elk/logstash/: Dockerfile
elk/logstash/pipeline/: logstash.conf
elk/logstash/pipeline/patterns/: postfix
tester/: asgi.py  settings.py  urls.py
